[package]
name = "sufinity-bridge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
env_logger = "0.11"
log = "0.4"
bcs = "0.1.6"
base64 = "0.22.1"
sui-types = { git = "https://github.com/MystenLabs/sui", package="sui-types", version = "0.1.0"}
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto",rev="8435ec2f308cb6c345e2737ae929d170589d9508" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package="shared-crypto", version = "0.0.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10.8"
secp256k1 = "0.20.2"
serde =  { version = "1.0.203", features = ["derive"]  } 
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
serde_derive = "1.0.203"
futures = "0.3"
actix-settings = "0.7.1"
actix-cors = "0.7.0"
