[package]
name = "minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]
# [[bin]]
# name = "minter"
# path = "src/main.rs"


[dependencies]
candid = "0.10.2"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.6.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
icrc-ledger-types = { git = "https://github.com/dfinity/ic", package = "icrc-ledger-types", version = "0.1.2" }
icrc-ledger-client = { git = "https://github.com/dfinity/ic", package = "icrc-ledger-client-cdk", version = "0.1.2" }
ic_principal = "0.1.1"
ic-canister-log = "0.2.0"
serde_derive = "1.0.202"
ic-stable-memory-derive = "0.4.2"
ic-stable-structures = "0.6.4"
ic-cdk-timers = "0.8.0"
hex = "0.4.3"
sha2 = "0.10.6"
base64 = "0.22.1"

